tests/suite/snapshots/suite__parse__tests__parse__vardecl07-2.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/vardecl07-2.xi:2:3]
   │
 2 │   x:int[1], y:bool[2]
   ·   ────┬───  
   ·       ╰───── Unexpected length in array type
───╯

